--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -31,40 +31,42 @@
       <section class="content conteudo-principal">
         <article class="produtos  ">
           <img src="img\banho1.jpg"/>
+          <h2>R$  35,00</h2>
           <h2>Banho para Filhotes</h2>
           <p>
-            Um banho suave, com produtos específicos para os pequenos, deixando
-            seu filhote limpinho e perfumado!
+            Um banho suave, com produtos específicos para os pequenos
           </p>
-          <a href="contato.html">R$  35,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos">
           <img src="img\banho3.jpg"/>
+          <h2>R$ 40,00</h2>
           <h2>Banho - Porte Pequeno</h2>
           <p>
             Ideal para cães de pequeno porte, com todo cuidado que ele merece!
           </p>
-          <a href="contato.html">R$ 40,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos  ">
           <img src="img\banho2.jpg"/>
+          <h2>R$ 50,00</h2>
           <h2>Banho - Porte Médio</h2>
           <p>
             Banho completo com carinho, deixando seu pet cheiroso e relaxado.
           </p>
-          <a href="contato.html">R$ 50,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos  ">
           <img src="img\banho4.jpg"/>
+          <h2>R$ 65,00</h2>
           <h2>Banho - Porte Grande</h2>
           <p>
-            Especial para os grandões da casa! Banho com cuidado redobrado e
-            muito carinho.
+            Especial para os grandões da casa! Banho com cuidado redobrado
           </p>
-          <a href="contato.html">R$ 65,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
       </section>
 
@@ -75,42 +77,46 @@
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img\tosa4.jpg"/>
+          <h2>R$ 40,00</h2>
           <h2>Tosa - Pelo Curto</h2>
           <p>
             Prática e refrescante, perfeita para manter o pet confortável e
             limpo!
           </p>
-          <a href="contato.html">R$ 40,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos  ">
           <img src="img\tosa2.jpg"/>
+          <h2>R$ 55,00</h2>
           <h2>Tosa - Pelo Médio</h2>
           <p>
             Para pets com pelagem média. Higiene, beleza e muito cuidado no
             corte!
           </p>
-          <a href="contato.html">R$ 55,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos  ">
           <img src="img\tosa3.jpg"/>
+          <h2>R$ 65,00</h2>
           <h2>Tosa - Pelo Longo</h2>
           <p>
             Corte delicado para pets com pelagem longa. Mais conforto e leveza
-            no dia a dia!
+            no dia
           </p>
-          <a href="contato.html">R$ 65,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
 
         <article class="produtos  ">
           <img src="img\tosa3.jpg"/>
+          <h2>R$ 53,00 <del>R$ 85,00</del></h2>
           <h2>Pacote: Tosa + Banho</h2>
           <p>
             Combo especial para deixar seu pet limpinho, cheiroso e com o visual
             renovado!
           </p>
-          <a href="contato.html"><del>R$ 85,00</del> R$ 53,00</a>
+          <a href="contato.html">Agendar</a>
         </article>
       </section>
 
@@ -121,54 +127,60 @@
       </section>
 
       <section class="content conteudo-principal">
-        <table class="tabela-promocoes">
-          <thead>
-            <tr>
-              <th>Serviço</th>
-              <th>Preço Original</th>
-              <th>Promoção</th>
-              <th>Válido até</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Banho + Tosa (Porte Pequeno)</td>
-              <td><del>R$ 56,00</del></td>
-              <td><strong>R$ 39,90</strong></td>
-              <td>30/04/2025</td>
-            </tr>
-            <tr>
-              <td>Banho (Porte Médio)</td>
-              <td><del>R$ 45,00</del></td>
-              <td><strong>R$ 35,00</strong></td>
-              <td>30/04/2025</td>
-            </tr>
-            <tr>
-              <td>Tosa (Pelo Longo)</td>
-              <td><del>R$ 70,00</del></td>
-              <td><strong>R$ 49,90</strong></td>
-              <td>30/04/2025</td>
-            </tr>
-            <tr>
-              <td>Combo Acessórios + Petisco</td>
-              <td><del>R$ 80,00</del></td>
-              <td><strong>R$ 59,90</strong></td>
-              <td>Enquanto durar o estoque</td>
-            </tr>
-          </tbody>
-        </table>
 
+        <article class="area-conteudo">
+          <table class="tabela-promocoes">
+            <thead>
+              <tr>
+                <th>Serviço</th>
+                <th>Preço Original</th>
+                <th>Promoção</th>
+                <th>Válido até</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Banho + Tosa (Porte Pequeno)</td>
+                <td><del>R$ 56,00</del></td>
+                <td><strong>R$ 39,90</strong></td>
+                <td>30/04/2025</td>
+              </tr>
+              <tr>
+                <td>Banho (Porte Médio)</td>
+                <td><del>R$ 45,00</del></td>
+                <td><strong>R$ 35,00</strong></td>
+                <td>30/04/2025</td>
+              </tr>
+              <tr>
+                <td>Tosa (Pelo Longo)</td>
+                <td><del>R$ 70,00</del></td>
+                <td><strong>R$ 49,90</strong></td>
+                <td>30/04/2025</td>
+              </tr>
+              <tr>
+                <td>Combo Acessórios + Petisco</td>
+                <td><del>R$ 80,00</del></td>
+                <td><strong>R$ 59,90</strong></td>
+                <td>Enquanto durar o estoque</td>
+              </tr>
+            </tbody>
+          </table>
+  
+        </article>
+       
         <aside class="barra-lateral">
 
           <h3>Por que escolher a Pet Paws?</h3>
           <ul id="lista-beneficios">
+            <br>
             <li>✔ Equipe especializada</li>
             <li>✔ Ambiente limpo e seguro</li>
             <li>✔ Produtos de alta qualidade</li>
             <li>✔ Amor pelos pets em cada detalhe</li>
+            <br>
           </ul>
 
-          <a href="contato.html">Contato </a>
+          <a href="contato.html">Entre em Contato! </a>
         </aside>
 
       </section>
@@ -196,7 +208,7 @@
 
         <article class="produtos  ">
           <h2>Kit de Acessórios</h2>
-          <p>Compre 2, leve 3! Coleiras, brinquedos e mais.</p>
+          <p>Compre 2, leve 3! Coleiras, brinquedos e muito mais. Tudo no precinho</p>
           <a href="contato.html">
             <img src="img\acessorio1.jpg"/>
           </a>
