--- a/atividades/atividade004-petshop/contato.html
+++ b/atividades/atividade004-petshop/contato.html
@@ -125,6 +125,16 @@
               <option value="acessorio">Acessorio</option>
               <option value="higiene">Higiene</option>
             </select>
+
+            <label for="servico">Cupon Desconto:</label>
+            <select id="servico" name="servico" required>
+              <option value="">-- Selecione --</option>
+              <option value="cupon">nenhum</option>
+              <option value="cupon">Banho2025</option>
+              <option value="cupon">saidinha</option>
+              <option value="cupon">petisco</option>
+              <option value="cupon">PetP</option>
+            </select>
   
             <label for="Endereço">Endereço:</label>
             <input type="text" id="telefone" name="telefone" />
@@ -181,10 +191,10 @@
              <img src="img\5653187_2947938.jpg">
 
           <ul id="lista-beneficios">
-            <li>📞 Telefone: (11) 99999-9999</li>
-            <li>✉️ E-mail: atendimento@petpaws.com.br</li>
-            <li>📍 Endereço: Rua dos Pets, 123 - SP</li>
-            <li>🕒 Atendimento: Seg a Sab, das 08h às 18h</li>
+            <li>📞 Telefone: (32) 99999-9999</li>
+            <li>✉️ E-mail: petpaw@gmail.com.br</li>
+            <li>📍 Endereço: Rua dos Pets, 1234 - MG</li>
+            <li>🕒 Atendimento: 08h às 18h</li>
           </ul>
         </aside>
       </section>
