--- a/atividades/atividade004-petshop/home.html
+++ b/atividades/atividade004-petshop/home.html
@@ -23,9 +23,8 @@
       <a href="contato.html">contato</a>
     </nav>
 
-    <main>
+    <main id="fonte">
   
-
       <section class="content conteudo-principal">
         <article class="area-conteudo">
           <h1>Seu Pet em Primeiro Lugar</h1>
