--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -13,7 +13,7 @@
 
   <body>
     <header id="fundo-header">
-      <h1><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
+      <h1><img src="img\dog-paw1.png"/> Pet Paws</h1>
     </header>
 
     <nav class="navegacao">
@@ -23,7 +23,7 @@
       <a href="contato.html">contato</a>
     </nav>
 
-    <main>
+    <main id="fonte">
 
       <section class="content conteudo-principal">
         <h1>Banhos</h1>
@@ -68,6 +68,16 @@
           </p>
           <a href="contato.html">Agendar</a>
         </article>
+
+        <article class="produtos  ">
+          <img src="img\pacote1.jpg"/>
+          <h2>R$ 65,00 <del>R$ 122,00</del></h2>
+          <h2>Pacote: Banho Filho + Adulto</h2>
+          <p>
+            Especial para os grandões e pequeninos da casa!
+          </p>
+          <a href="contato.html">Agendar</a>
+        </article>
       </section>
 
       <section class="content conteudo-principal">
@@ -109,7 +119,18 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\tosa3.jpg"/>
+          <img src="img\tosa5.jpg"/>
+          <h2>R$ 65,00</h2>
+          <h2>Tosa - Velhinhos</h2>
+          <p>
+            Corte delicado para pets mais velhinhos e com cuidados especiais.
+          </p>
+          <a href="contato.html">Agendar</a>
+        </article>
+
+
+        <article class="produtos  ">
+          <img src="img\pacote2.jpg"/>
           <h2>R$ 53,00 <del>R$ 85,00</del></h2>
           <h2>Pacote: Tosa + Banho</h2>
           <p>
