--- a/atividades/atividade004-petshop/index.html
+++ b/atividades/atividade004-petshop/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">Quem somos</a>
+      <a href="index.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
