--- a/atividades/atividade004-petshop/produtos.html
+++ b/atividades/atividade004-petshop/produtos.html
@@ -17,7 +17,7 @@
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">Quem somos</a>
+      <a href="index.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
@@ -28,6 +28,7 @@
       <section class="content conteudo-principal">
         <h1> Comidinhas</h1>
       </section>
+      <hr/>
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img/petisco.webp" />
@@ -75,11 +76,11 @@
         </article>
 
       </section>
-      
-      <!-- BRINQUEDINHOS -->
+
       <section class="content conteudo-principal">
         <h1> Brinquedinhos</h1>
       </section>
+      <hr/>
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img/brinquedinho1.webp" />
@@ -130,6 +131,7 @@
       <section class="content conteudo-principal">
         <h1> Acessórios</h1>
       </section>
+      <hr/>
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img/acessorio1.webp" />
@@ -180,6 +182,8 @@
       <section class="content conteudo-principal">
         <h1> Higiene</h1>
       </section>
+
+      <hr/>
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img/higiene1.webp"/>
@@ -237,7 +241,6 @@
       </section>
 
       <section class="content conteudo-principal">
-        <section class="content conteudo-principal">
           <article class="produtos">
             <img src="img/promocao1.webp"/>
             <h2>R$ 46,50 <del>R$ 105,00</del></h2>
