--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -17,7 +17,7 @@
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">Quem somos</a>
+      <a href="index.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
@@ -27,8 +27,11 @@
 
       <section class="content conteudo-principal">
         <h1>Banhos</h1>
+        
       </section>
+      <hr/>
       <section class="content conteudo-principal">
+        
         <article class="produtos  ">
           <img src="img\banho1.jpg"/>
           <h2>R$  35,00</h2>
@@ -83,6 +86,7 @@
       <section class="content conteudo-principal">
         <h1>Tosas</h1>
       </section>
+      <hr/>
 
       <section class="content conteudo-principal">
         <article class="produtos">
