--- a/praticas_e_testes/pratica_1/index.html
+++ b/praticas_e_testes/pratica_1/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Prática com JavaScript</title>
+  <title>Menu Lateral</title>
   <link rel="stylesheet" href="css/style.css">
-  
 </head>
-
 <body>
+  <div class="sidebar closed" id="sidebar">
+    <div class="toggle-btn" onclick="toggleSidebar()">☰</div>
+    <ul>
+      <li><a href="#"><span class="icon">🏠</span><span class="text">Início</span></a></li>
+      <li><a href="#"><span class="icon">📁</span><span class="text">Projetos</span></a></li>
+      <li><a href="#"><span class="icon">❓</span><span class="text">Dúvidas</span></a></li>
+      <li><a href="#"><span class="icon">⚙️</span><span class="text">Configurações</span></a></li>
+    </ul>
+  </div>
 
-  <div class="container">
-    <h2>Validação de Formulário</h2>
-    <input type="text" id="nome" placeholder="Digite seu nome">
-    <input type="number" id="idade" placeholder="Digite sua idade">
-    <button type="button" id="enviar">Enviar</button>
-    <p id="mensagem"></p>
+  <div class="main-content">
+    <h1>Conteúdo Principal</h1>
+    <p>Aqui vai o conteúdo do seu site.</p>
   </div>
 
   <script src="js/script.js"></script>
