--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/index.html
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/index.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+
     <main>
       <!-- A - Par ou Ímpar -->
       <section class="container">
         <h2>A - Verificação de Par ou Ímpar</h2>
         <label for="numeroParImpar">Digite um número inteiro:</label>
         <input type="number" id="numeroParImpar" />
-        <button type="button" id="verificarBtn">
-          <strong>Verificar</strong>
-        </button>
+        <button type="button" id="verificarBtn">Verificar</button>
         <p class="resultado" id="resultadoParImpar"></p>
       </section>
 
@@ -79,12 +78,13 @@
         <input type="number" id="inputA" placeholder="a" />
         <input type="number" id="inputB" placeholder="b" />
         <input type="number" id="inputC" placeholder="c" />
-        <button type="button" id="btnCalcular">Calcular</button>
+      <button type="button" id="btnCalcularBhaskara">Calcular</button>
         <div class="resultado" id="resultadoBhaskara"></div>
       </section>
     </main>
 
     <!-- Importa o JavaScript modularizado -->
+     <script src="src/barra.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
