FEAT: Quase tudo pronto

--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/index.html
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
 
+    <header>
+      <h1>Atividade 4 - JS Condincionais </h1>
+    </header>
+    
     <main>
-      <!-- A - Par ou Ímpar -->
       <section class="container">
         <h2>A - Verificação de Par ou Ímpar</h2>
         <label for="numeroParImpar">Digite um número inteiro:</label>
@@ -18,7 +21,6 @@
         <p class="resultado" id="resultadoParImpar"></p>
       </section>
 
-      <!-- B - Maior/Menor ou Iguais -->
       <section class="container">
         <h2>B - Analisar Três Números</h2>
         <input type="number" id="num1" placeholder="Número 1" />
@@ -78,13 +80,12 @@
         <input type="number" id="inputA" placeholder="a" />
         <input type="number" id="inputB" placeholder="b" />
         <input type="number" id="inputC" placeholder="c" />
-      <button type="button" id="btnCalcularBhaskara">Calcular</button>
-        <div class="resultado" id="resultadoBhaskara"></div>
+        <button type="button" id="btnCalcularBhaskara">Calcular</button>
+        <p class="resultado" id="resultadoBhaskara"></p>
       </section>
     </main>
 
-    <!-- Importa o JavaScript modularizado -->
-     <script src="src/barra.js"></script>
+    <script src="src/barra.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
