Refac reformulado e modularizado em andamento

--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/index.html
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atividades</title>
+    <title>Atividades A até H</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
 
     <header>
-      <h1>Atividade 4 - JS Condincionais Modularizada</h1>
+      <h1>Atividade 4 - JS Condincionais Refatorada</h1>
     </header>
     
     <main>
@@ -81,6 +81,6 @@
       </section>
     </main>
 
-    <script type="module" src="src/main.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
