--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/index.html
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/index.html
@@ -186,9 +186,9 @@
         </article>
         <article class="atividade">
           <h2>H - Cálculo com a Fórmula de Bhaskara</h2>
-          <input type="number" id="inputA" placeholder="a" />
-          <input type="number" id="inputB" placeholder="b" />
-          <input type="number" id="inputC" placeholder="c" />
+        <input type="number" id="inputA" placeholder="Primeiro valor" />
+        <input type="number" id="inputB" placeholder="Segundo valor" />
+        <input type="number" id="inputC" placeholder="Terceiro valor" />
           <button type="button" id="btnCalcularBhaskara">Calcular</button>
           <p class="resultado" id="resultadoBhaskara"></p>
         </article>
