--- a/praticas_e_testes/teste/index.html
+++ b/praticas_e_testes/teste/index.html
@@ -4,16 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gestão de Alunos</title>
-  <link rel="stylesheet" href="css/estilo.css" />
 </head>
 <body>
-  <header>
-    <h1>Gestão de Alunos</h1>
-  </header>
 
   <main>
     <section class="container">
-      <h2>Cadastro de Aluno</h2>
+
       <div class="formulario">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" required />
@@ -27,7 +23,7 @@
         <button id="adicionarAluno">Adicionar Aluno</button>
       </div>
 
-      <h2>Lista de Alunos</h2>
+      <h2>Lista</h2>
       <table id="tabelaAlunos">
         <thead>
           <tr>
@@ -45,9 +41,6 @@
     </section>
   </main>
 
-  <footer>
-    © 2025 Escola Exemplo
-  </footer>
 
   <script src="js/main.js"></script>
 </body>
