--- a/praticas_e_testes/teste/index.html
+++ b/praticas_e_testes/teste/index.html
@@ -25,19 +25,19 @@
 
       <h2>Lista</h2>
       <table id="tabelaAlunos">
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Frequência</th>
-            <th>Média</th>
-            <th>Menção</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-      
-        </tbody>
-      </table>
+       <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Frequência</th>
+      <th>Nota Total</th>
+      <th>Média</th>
+      <th>Menção</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Aqui as linhas serão adicionadas -->
+  </tbody>
     </section>
   </main>
 
